Add article previews w/ mobile styling

--- a/index.html
+++ b/index.html
@@ -26,18 +26,94 @@
                             <li><a href="">Books</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">Analysis
+                    <li class="dropdown">Articles
                         <ul class="invisible">
                             <li><a href="">Games</a></li>
                             <li><a href="">Movies</a></li>
                             <li><a href="">Books</a></li>
                         </ul>
                     </li>
+                    <li class="single-item"><a href="">About us</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            
+            <h2>Recent Articles</h2>
+            <div class="most-recent-articles">
+                <article class="big-preview">
+                    <img src="https://picsum.photos/400/250" alt="">
+                    <div class="tag-container">
+                        <span class="tag">Analysis</span>
+                        <span class="tag">Games</span>
+                    </div>
+                    <h3>Insert Title</h3>
+                    <h5>September 9th, 2024</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae libero exercitationem vero eligendi et deleniti saepe, blanditiis natus nam unde ipsum odio, beatae, modi ad assumenda esse minus velit ratione aliquid labore corrupti. Suscipit ut est deleniti consectetur doloremque cum ipsum eaque et facilis pariatur, cupiditate sint quasi maiores molestiae rem assumenda?</p>
+                </article>
+                <article class="big-preview">
+                    <img src="https://picsum.photos/400/250" alt="">
+                    <div class="tag-container">
+                        <span class="tag">Analysis</span>
+                        <span class="tag">Games</span>
+                    </div>
+                    <h3>Insert Title</h3>
+                    <h5>September 9th, 2024</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae libero exercitationem vero eligendi et deleniti saepe, blanditiis natus nam unde ipsum odio, beatae, modi ad assumenda esse minus velit ratione aliquid labore corrupti. Suscipit ut est deleniti consectetur doloremque cum ipsum eaque et facilis pariatur, cupiditate sint quasi maiores molestiae rem assumenda?</p>
+                </article>
+                <article class="big-preview">
+                    <img src="https://picsum.photos/400/250" alt="">
+                    <div class="tag-container">
+                        <span class="tag">Analysis</span>
+                        <span class="tag">Games</span>
+                    </div>
+                    <h3>Insert Title</h3>
+                    <h5>September 9th, 2024</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae libero exercitationem vero eligendi et deleniti saepe, blanditiis natus nam unde ipsum odio, beatae, modi ad assumenda esse minus velit ratione aliquid labore corrupti. Suscipit ut est deleniti consectetur doloremque cum ipsum eaque et facilis pariatur, cupiditate sint quasi maiores molestiae rem assumenda?</p>
+                </article>
+            </div>
+            <div class="other-recent-articles">
+                <h2>Other articles</h2>
+                <article class="small-preview">
+                    <div class="tag-container">
+                        <span class="tag small">Analysis</span>
+                        <span class="tag small">Games</span>
+                    </div>
+                    <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium modi fuga fugit?</h3>
+                    <h5>September 9th, 2024</h5>
+                </article>
+                <article class="small-preview">
+                    <div class="tag-container">
+                        <span class="tag small">Analysis</span>
+                        <span class="tag small">Games</span>
+                    </div>
+                    <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+                    <h5>September 9th, 2024</h5>
+                </article>
+                <article class="small-preview">
+                    <div class="tag-container">
+                        <span class="tag small">Analysis</span>
+                        <span class="tag small">Games</span>
+                    </div>
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dolorem optio autem asperiores ab corporis?</h3>
+                    <h5>September 9th, 2024</h5>
+                </article>
+                <article class="small-preview">
+                    <div class="tag-container">
+                        <span class="tag small">Analysis</span>
+                        <span class="tag small">Games</span>
+                    </div>
+                    <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, incidunt.</h3>
+                    <h5>September 9th, 2024</h5>
+                </article>
+                <article class="small-preview">
+                    <div class="tag-container">
+                        <span class="tag small">Analysis</span>
+                        <span class="tag small">Games</span>
+                    </div>
+                    <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi dolorum nostrum repudiandae!</h3>
+                    <h5>September 9th, 2024</h5>
+                </article>
+            </div>
         </main>
         <footer>
 
