Add and style footer, style nav's menu

--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
                 </div>
                 <ul id="menu" class="invisible">
                     <li class="single-item"><a href="">News</a></li>
-                    <li class="dropdown">Wiki
-                        <ul class="invisible">
-                            <li><a href="">Games</a></li>
+                    <li class="dropdown">
+                        <span class="arrow">Wiki</span>
+                        <ul class="sub-items invisible">
+                            <li id="teste"><a href="">Games</a></li>
                             <li><a href="">Movies</a></li>
                             <li><a href="">Books</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">Articles
-                        <ul class="invisible">
+                    <li class="dropdown">
+                        <span class="arrow">Articles</span>
+                        <ul class="sub-items invisible">
                             <li><a href="">Games</a></li>
                             <li><a href="">Movies</a></li>
                             <li><a href="">Books</a></li>
@@ -116,7 +118,8 @@
             </div>
         </main>
         <footer>
-
+            <p>Created by niahon</p>
+            <a id="github">Github</a>
         </footer>
     </body>
 </html>
