Create and style wiki search

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li class="dropdown">
                         <span class="arrow">Wiki</span>
                         <ul class="sub-items invisible">
-                            <li id="teste"><a href="">Games</a></li>
+                            <li id="teste"><a href="wiki-games.html">Games</a></li>
                             <li><a href="">Movies</a></li>
                             <li><a href="">Books</a></li>
                         </ul>
@@ -73,6 +73,8 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae libero exercitationem vero eligendi et deleniti saepe, blanditiis natus nam unde ipsum odio, beatae, modi ad assumenda esse minus velit ratione aliquid labore corrupti. Suscipit ut est deleniti consectetur doloremque cum ipsum eaque et facilis pariatur, cupiditate sint quasi maiores molestiae rem assumenda?</p>
                 </article>
             </div>
+        </main>
+        <aside>
             <div class="other-recent-articles">
                 <h2>Other articles</h2>
                 <article class="small-preview">
@@ -116,7 +118,7 @@
                     <h5>September 9th, 2024</h5>
                 </article>
             </div>
-        </main>
+        </aside>
         <footer>
             <p>Created by niahon</p>
             <a id="github">Github</a>
