Style rest of game wiki mobile page

--- a/wiki-games.html
+++ b/wiki-games.html
@@ -77,14 +77,42 @@
                         <p>Published by: <span>Publisher</span></p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam ullam neque voluptates aspernatur repellendus cupiditate illum recusandae deleniti nihil dicta doloremque consequatur libero veniam aut aliquam, et, mollitia delectus.</p>
                     </div>
-                    
-
-
+                </div>
+                <div class="wiki-search-result">
+                    <h3>Game Name</h3>
+                    <h5>March 31st 2013</h5>
+                    <img src="https://picsum.photos/270/250" alt="">
+                    <div class="tag-container">
+                        <span class="tag">Tag 1</span>
+                        <span class="tag">Tag 2</span>
+                        <span class="tag">Tag 3</span>
+                    </div>
+                    <div class="search-info">
+                        <p>Developed by: <span>Dev team</span></p>
+                        <p>Published by: <span>Publisher</span></p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam ullam neque voluptates aspernatur repellendus cupiditate illum recusandae deleniti nihil dicta doloremque consequatur libero veniam aut aliquam, et, mollitia delectus.</p>
+                    </div>
+                </div>
+                <div class="wiki-search-result">
+                    <h3>Game Name</h3>
+                    <h5>March 31st 2013</h5>
+                    <img src="https://picsum.photos/270/250" alt="">
+                    <div class="tag-container">
+                        <span class="tag">Tag 1</span>
+                        <span class="tag">Tag 2</span>
+                        <span class="tag">Tag 3</span>
+                    </div>
+                    <div class="search-info">
+                        <p>Developed by: <span>Dev team</span></p>
+                        <p>Published by: <span>Publisher</span></p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam ullam neque voluptates aspernatur repellendus cupiditate illum recusandae deleniti nihil dicta doloremque consequatur libero veniam aut aliquam, et, mollitia delectus.</p>
+                    </div>
                 </div>
             </div>
         </main>
         <footer>
-
+            <p>Created by niahon</p>
+            <a id="github">Github</a>
         </footer>
     </body>
 </html>
