Create and style movie wiki mobile page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <span class="arrow">Wiki</span>
                         <ul class="sub-items invisible">
                             <li id="teste"><a href="wiki-games.html">Games</a></li>
-                            <li><a href="">Movies</a></li>
+                            <li><a href="wiki-movies.html">Movies</a></li>
                             <li><a href="">Books</a></li>
                         </ul>
                     </li>
