--- a/wiki-movies.html
+++ b/wiki-movies.html
@@ -40,17 +40,17 @@
             </nav>
         </header>
         <main>
-            <h2 id="form-title">FILTER GAMES BY:</h2>
+            <h2 id="form-title">FILTER MOVIES BY:</h2>
             <form>
-                <label for="game-keyword">Title:</label>
-                <input type="text" id="game-keyword" name="game-keyword">
-                <label for="game-date">Release Date:</label>
-                <input type="number" min="1900" max="2100" id="game-date" name="game-date">
+                <label for="movie-keyword">Title:</label>
+                <input type="text" id="movie-keyword" name="movie-keyword">
+                <label for="movie-date">Release Date:</label>
+                <input type="number" min="1900" max="2100" id="movie-date" name="movie-date">
                 <fieldset>
                     <legend>Tag(s):</legend>
                         <div>
                             <input type="checkbox" id="survival"> 
-                            <label for="survival">Survival Horror</label>
+                            <label for="survival">Blockbuster</label>
                         </div>
                         <div>
                             <input type="checkbox" id="indie"> 
@@ -58,13 +58,13 @@
                         </div>
                         <div>
                             <input type="checkbox" id="survival"> 
-                            <label for="survival">AAA</label>
+                            <label for="survival">Award Winners</label>
                         </div>
                 </fieldset>
             </form>
             <div id="wiki-search-container">
                 <div class="wiki-search-result">
-                    <h3>Game Title</h3>
+                    <h3>Movie Title</h3>
                     <h5>March 31st 2013</h5>
                     <img src="https://picsum.photos/270/250" alt="">
                     <div class="tag-container">
@@ -73,13 +73,14 @@
                         <span class="tag">Tag 3</span>
                     </div>
                     <div class="search-info">
-                        <p>Developed by: <span>Dev team</span></p>
-                        <p>Published by: <span>Publisher</span></p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam ullam neque voluptates aspernatur repellendus cupiditate illum recusandae deleniti nihil dicta doloremque consequatur libero veniam aut aliquam, et, mollitia delectus.</p>
+                        <p>Directed by: <span>Director</span></p>
+                        <p>Written by: <span>Writers</span></p>
+                        <p>Published by: <span>Studio</span></p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam ullam neque voluptates aspernatur repellendus cupiditate illum recusandae deleniti nihil dicta doloremque.</p>
                     </div>
                 </div>
                 <div class="wiki-search-result">
-                    <h3>Game Title</h3>
+                    <h3>Movie Title</h3>
                     <h5>March 31st 2013</h5>
                     <img src="https://picsum.photos/270/250" alt="">
                     <div class="tag-container">
@@ -88,13 +89,14 @@
                         <span class="tag">Tag 3</span>
                     </div>
                     <div class="search-info">
-                        <p>Developed by: <span>Dev team</span></p>
-                        <p>Published by: <span>Publisher</span></p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam ullam neque voluptates aspernatur repellendus cupiditate illum recusandae deleniti nihil dicta doloremque consequatur libero veniam aut aliquam, et, mollitia delectus.</p>
+                        <p>Directed by: <span>Director</span></p>
+                        <p>Written by: <span>Writers</span></p>
+                        <p>Published by: <span>Studio</span></p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam ullam neque voluptates aspernatur repellendus cupiditate illum recusandae deleniti nihil dicta doloremque.</p>
                     </div>
                 </div>
                 <div class="wiki-search-result">
-                    <h3>Game Title</h3>
+                    <h3>Movie Title</h3>
                     <h5>March 31st 2013</h5>
                     <img src="https://picsum.photos/270/250" alt="">
                     <div class="tag-container">
@@ -103,9 +105,10 @@
                         <span class="tag">Tag 3</span>
                     </div>
                     <div class="search-info">
-                        <p>Developed by: <span>Dev team</span></p>
-                        <p>Published by: <span>Publisher</span></p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam ullam neque voluptates aspernatur repellendus cupiditate illum recusandae deleniti nihil dicta doloremque consequatur libero veniam aut aliquam, et, mollitia delectus.</p>
+                        <p>Directed by: <span>Director</span></p>
+                        <p>Written by: <span>Writers</span></p>
+                        <p>Published by: <span>Studio</span></p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam ullam neque voluptates aspernatur repellendus cupiditate illum recusandae deleniti nihil dicta doloremque.</p>
                     </div>
                 </div>
             </div>
