Create and style book wiki mobile page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <ul class="sub-items invisible">
                             <li id="teste"><a href="wiki-games.html">Games</a></li>
                             <li><a href="wiki-movies.html">Movies</a></li>
-                            <li><a href="">Books</a></li>
+                            <li><a href="wiki-books.html">Books</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
