--- a/wiki-movies.html
+++ b/wiki-movies.html
@@ -24,7 +24,7 @@
                         <ul class="sub-items invisible">
                             <li id="teste"><a href="wiki-games.html">Games</a></li>
                             <li><a href="wiki-movies.html">Movies</a></li>
-                            <li><a href="">Books</a></li>
+                            <li><a href="wiki-books.html">Books</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -42,8 +42,8 @@
         <main>
             <h2 id="form-title">FILTER MOVIES BY:</h2>
             <form>
-                <label for="movie-keyword">Title:</label>
-                <input type="text" id="movie-keyword" name="movie-keyword">
+                <label for="movie-title">Title:</label>
+                <input type="text" id="movie-title" name="movie-title">
                 <label for="movie-date">Release Date:</label>
                 <input type="number" min="1900" max="2100" id="movie-date" name="movie-date">
                 <fieldset>
