--- a/wiki-books.html
+++ b/wiki-books.html
@@ -40,31 +40,45 @@
             </nav>
         </header>
         <main>
-            <h2 id="form-title">FILTER GAMES BY:</h2>
+            <h2 id="form-title">FILTER BOOKS BY:</h2>
             <form>
-                <label for="game-title">Title:</label>
-                <input type="text" id="game-title" name="game-title">
-                <label for="game-date">Release Date:</label>
-                <input type="number" min="1900" max="2100" id="game-date" name="game-date">
+                <label for="book-title">Title:</label>
+                <input type="text" id="book-title" name="book-title">
+                <label for="book-author">Author:</label>
+                <input type="text" id="book-author" name="book-author">
+                <label for="type">Type:</label>
+                <select name="type" id="type">
+                    <option value="" default></option>
+                    <option value="short">Short Story</option>
+                    <option value="Collection">Collection</option>
+                    <option value="Novel">Novel</option>
+                    <option value="Comic">Comic</option>
+                </select>
+                <label for="book-date">Release Date:</label>
+                <input type="number" min="1900" max="2100" id="book-date" name="book-date">
                 <fieldset>
                     <legend>Tag(s):</legend>
                         <div>
-                            <input type="checkbox" id="survival"> 
-                            <label for="survival">Survival Horror</label>
+                            <input type="checkbox" id="short-story"> 
+                            <label for="short-story">Short Story</label>
                         </div>
                         <div>
-                            <input type="checkbox" id="indie"> 
-                            <label for="survival">Indie</label>
+                            <input type="checkbox" id="collection"> 
+                            <label for="collection">Collection</label>
                         </div>
                         <div>
-                            <input type="checkbox" id="survival"> 
-                            <label for="survival">AAA</label>
+                            <input type="checkbox" id="novel"> 
+                            <label for="novel">Novel</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" id="comic"> 
+                            <label for="comic">Comic</label>
                         </div>
                 </fieldset>
             </form>
             <div id="wiki-search-container">
                 <div class="wiki-search-result">
-                    <h3>Game Title</h3>
+                    <h3>Book Title</h3>
                     <h5>March 31st 2013</h5>
                     <img src="https://picsum.photos/270/250" alt="">
                     <div class="tag-container">
@@ -73,13 +87,13 @@
                         <span class="tag">Tag 3</span>
                     </div>
                     <div class="search-info">
-                        <p>Developed by: <span>Dev team</span></p>
-                        <p>Published by: <span>Publisher</span></p>
+                        <p>Author: <span>Author name</span></p>
+                        <p>Type: <span>Book Type</span></p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam ullam neque voluptates aspernatur repellendus cupiditate illum recusandae deleniti nihil dicta doloremque consequatur libero veniam aut aliquam, et, mollitia delectus.</p>
                     </div>
                 </div>
                 <div class="wiki-search-result">
-                    <h3>Game Title</h3>
+                    <h3>Book Title</h3>
                     <h5>March 31st 2013</h5>
                     <img src="https://picsum.photos/270/250" alt="">
                     <div class="tag-container">
@@ -88,13 +102,13 @@
                         <span class="tag">Tag 3</span>
                     </div>
                     <div class="search-info">
-                        <p>Developed by: <span>Dev team</span></p>
-                        <p>Published by: <span>Publisher</span></p>
+                        <p>Author: <span>Author name</span></p>
+                        <p>Type: <span>Book Type</span></p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam ullam neque voluptates aspernatur repellendus cupiditate illum recusandae deleniti nihil dicta doloremque consequatur libero veniam aut aliquam, et, mollitia delectus.</p>
                     </div>
                 </div>
                 <div class="wiki-search-result">
-                    <h3>Game Title</h3>
+                    <h3>Book Title</h3>
                     <h5>March 31st 2013</h5>
                     <img src="https://picsum.photos/270/250" alt="">
                     <div class="tag-container">
@@ -103,8 +117,8 @@
                         <span class="tag">Tag 3</span>
                     </div>
                     <div class="search-info">
-                        <p>Developed by: <span>Dev team</span></p>
-                        <p>Published by: <span>Publisher</span></p>
+                        <p>Author: <span>Author name</span></p>
+                        <p>Type: <span>Book Type</span></p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam ullam neque voluptates aspernatur repellendus cupiditate illum recusandae deleniti nihil dicta doloremque consequatur libero veniam aut aliquam, et, mollitia delectus.</p>
                     </div>
                 </div>
