Create and style about-us, organize css

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                             <li><a href="">Books</a></li>
                         </ul>
                     </li>
-                    <li class="single-item"><a href="">About us</a></li>
+                    <li class="single-item"><a href="about-us.html">About us</a></li>
                 </ul>
             </nav>
         </header>
-        <main>
+        <main id="index-main">
             <h2>Recent Articles</h2>
             <div class="most-recent-articles">
                 <article class="big-preview">
@@ -74,7 +74,7 @@
                 </article>
             </div>
         </main>
-        <aside>
+        <aside id="index-aside">
             <div class="other-recent-articles">
                 <h2>Other articles</h2>
                 <article class="small-preview">
@@ -121,7 +121,7 @@
         </aside>
         <footer>
             <p>Created by niahon</p>
-            <a id="github">Github</a>
+            <a class="icon github">Github</a>
         </footer>
     </body>
 </html>
