--- a/wiki-books.html
+++ b/wiki-books.html
@@ -35,7 +35,7 @@
                             <li><a href="">Books</a></li>
                         </ul>
                     </li>
-                    <li class="single-item"><a href="">About us</a></li>
+                    <li class="single-item"><a href="about-us.html">About us</a></li>
                 </ul>
             </nav>
         </header>
@@ -126,7 +126,7 @@
         </main>
         <footer>
             <p>Created by niahon</p>
-            <a id="github">Github</a>
+            <a class="icon github">Github</a>
         </footer>
     </body>
 </html>
